--- a/lab2/ble_python/demo.ipynb
+++ b/lab2/ble_python/demo.ipynb
@@ -10,20 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -179,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
@@ -188,11 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-02-14 00:13:17,572 |\u001b[32m INFO     \u001b[0m|: Looking for Artemis Nano Peripheral Device: C0:83:D5:66:86:3C\n",
-      "2023-02-14 00:13:22,836 |\u001b[31m ERROR    \u001b[0m|: disconnected\n",
-      "2023-02-14 00:13:23,841 |\u001b[33m WARNING  \u001b[0m|: Attempting to connect again...\n",
-      "2023-02-14 00:13:23,842 |\u001b[32m INFO     \u001b[0m|: Looking for Artemis Nano Peripheral Device: C0:83:D5:66:86:3C\n",
-      "2023-02-14 00:13:27,600 |\u001b[32m INFO     \u001b[0m|: Connected to C0:83:D5:66:86:3C\n"
+      "2023-02-14 14:29:16,551 |\u001b[32m INFO     \u001b[0m|: Looking for Artemis Nano Peripheral Device: C0:83:D5:66:86:3C\n",
+      "2023-02-14 14:29:19,992 |\u001b[32m INFO     \u001b[0m|: Connected to C0:83:D5:66:86:3C\n"
      ]
     }
    ],
@@ -220,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -229,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.5\n"
+      "25.0\n"
      ]
     }
    ],
@@ -241,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -271,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -282,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -310,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -335,11 +323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-02-14 14:14:37,788 |\u001b[32m INFO     \u001b[0m|: Disconnected from AB6C95E9-A4ED-4F7A-B208-0AFEAFDDA3AD\n"
+     ]
+    }
+   ],
    "source": [
     "# Disconnect\n",
     "ble.disconnect()"
@@ -354,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -368,9 +364,6 @@
     }
    ],
    "source": [
-    "# Send an ECHO command with a string value from the computer to the Artemis board, \n",
-    "# and receive an augmented string on the computer.\n",
-    "\n",
     "ble.send_command(CMD.ECHO, \"Hello World!\")\n",
     "\n",
     "s = ble.receive_string(ble.uuid['RX_STRING'])\n",
@@ -386,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -395,13 +388,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T:25651\n"
+      "T:2104284\n"
      ]
     }
    ],
    "source": [
-    "# Add a command GET_TIME_MILLIS which makes the robot reply write a string such as “T:123456” to the string characteristic.\n",
-    "\n",
     "ble.send_command(CMD.GET_TIME_MILLIS, \"\")\n",
     "\n",
     "s = ble.receive_string(ble.uuid['RX_STRING'])\n",
@@ -417,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -426,15 +417,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T:13554 is the received time\n"
+      "T:2582635 is the received time\n"
      ]
     }
    ],
    "source": [
-    "# Setup a notification handler in Python to receive the string value (the BLEStringCharactersitic in Arduino) \n",
-    "# from the Artemis board. \n",
-    "# In the callback function, extract the time from the string.\n",
-    "\n",
     "def notif_callback(uuid, data):\n",
     "    print((ble.bytearray_to_string(data)) + \" is the received time\")\n",
     "    ble.stop_notify(ble.uuid['RX_STRING'])\n",
@@ -452,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -461,18 +448,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample 1 at T:609572 is C:26.853\n",
-      "Sample 2 at T:610572 is C:26.779\n",
-      "Sample 3 at T:611572 is C:26.890\n",
-      "Sample 4 at T:612572 is C:26.853\n",
-      "Sample 5 at T:613572 is C:27.335\n"
+      "Sample 1 at T:2746942 is C:27.1\n",
+      "Sample 2 at T:2747943 is C:27.521\n",
+      "Sample 3 at T:2748943 is C:27.410\n",
+      "Sample 4 at T:2749943 is C:27.558\n",
+      "Sample 5 at T:2750943 is C:27.558\n"
      ]
     }
    ],
    "source": [
-    "# Add a command GET_TEMP_5s which sends an array of five timestamped internal die temperature readings using a string array, \n",
-    "# taken once per second for five seconds.\n",
-    "\n",
     "def notif_callback(uuid, data):\n",
     "    global instances\n",
     "    pair = (ble.bytearray_to_string(data)).split('|')\n",
@@ -481,12 +465,10 @@
     "    instances += 1\n",
     "    if instances > 5:\n",
     "        ble.stop_notify(ble.uuid['RX_STRING'])\n",
-    "    \n",
     "\n",
     "instances = 1\n",
     "ble.start_notify(ble.uuid['RX_STRING'], notif_callback)\n",
-    "ble.send_command(CMD.GET_TEMP_5s, \"\")\n",
-    "\n"
+    "ble.send_command(CMD.GET_TEMP_5s, \"\")"
    ]
   },
   {
@@ -498,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -507,115 +489,103 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample 1 at T:717418 is C:26.631\n",
-      "Sample 2 at T:717418 is C:26.668\n",
-      "Sample 3 at T:717419 is C:27.372\n",
-      "Sample 4 at T:717419 is C:27.595\n",
-      "Sample 5 at T:717465 is C:26.779\n",
-      "Sample 6 at T:717510 is C:26.742\n",
-      "Sample 7 at T:717510 is C:26.482\n",
-      "Sample 8 at T:717551 is C:26.631\n",
-      "Sample 9 at T:717601 is C:26.853\n",
-      "Sample 10 at T:717601 is C:27.39\n",
-      "Sample 11 at T:717642 is C:26.816\n",
-      "Sample 12 at T:717642 is C:26.890\n",
-      "Sample 13 at T:717688 is C:26.556\n",
-      "Sample 14 at T:717732 is C:26.927\n",
-      "Sample 15 at T:717732 is C:26.927\n",
-      "Sample 16 at T:717782 is C:26.445\n",
-      "Sample 17 at T:717782 is C:27.261\n",
-      "Sample 18 at T:717820 is C:27.113\n",
-      "Sample 19 at T:717871 is C:26.927\n",
-      "Sample 20 at T:717917 is C:26.779\n",
-      "Sample 21 at T:718005 is C:27.150\n",
-      "Sample 22 at T:718005 is C:26.964\n",
-      "Sample 23 at T:718054 is C:26.222\n",
-      "Sample 24 at T:718095 is C:27.521\n",
-      "Sample 25 at T:718141 is C:26.964\n",
-      "Sample 26 at T:718183 is C:27.224\n",
-      "Sample 27 at T:718183 is C:26.890\n",
-      "Sample 28 at T:718230 is C:26.779\n",
-      "Sample 29 at T:718275 is C:27.113\n",
-      "Sample 30 at T:718322 is C:26.890\n",
-      "Sample 31 at T:718367 is C:27.261\n",
-      "Sample 32 at T:718457 is C:26.705\n",
-      "Sample 33 at T:718499 is C:27.76\n",
-      "Sample 34 at T:718548 is C:26.927\n",
-      "Sample 35 at T:718638 is C:26.853\n",
-      "Sample 36 at T:718722 is C:26.556\n",
-      "Sample 37 at T:718816 is C:27.1\n",
-      "Sample 38 at T:718906 is C:26.816\n",
-      "Sample 39 at T:718954 is C:27.298\n",
-      "Sample 40 at T:719000 is C:27.447\n",
-      "Sample 41 at T:719087 is C:27.150\n",
-      "Sample 42 at T:719179 is C:26.631\n",
-      "Sample 43 at T:719220 is C:26.853\n",
-      "Sample 44 at T:719269 is C:27.521\n",
-      "Sample 45 at T:719360 is C:26.408\n",
-      "Sample 46 at T:719402 is C:26.816\n",
-      "Sample 47 at T:719451 is C:27.372\n",
-      "Sample 48 at T:719496 is C:26.519\n",
-      "Sample 49 at T:719541 is C:26.853\n",
-      "Sample 50 at T:719580 is C:26.927\n",
-      "Sample 51 at T:719629 is C:26.705\n",
-      "Sample 52 at T:719672 is C:27.39\n",
-      "Sample 53 at T:719718 is C:26.631\n",
-      "Sample 54 at T:719763 is C:27.447\n",
-      "Sample 55 at T:719857 is C:27.150\n",
-      "Sample 56 at T:719902 is C:27.410\n",
-      "Sample 57 at T:719946 is C:26.371\n",
-      "Sample 58 at T:719990 is C:27.892\n",
-      "Sample 59 at T:720084 is C:27.706\n",
-      "Sample 60 at T:720127 is C:26.853\n",
-      "Sample 61 at T:720169 is C:26.964\n",
-      "Sample 62 at T:720212 is C:27.335\n",
-      "Sample 63 at T:720262 is C:26.927\n",
-      "Sample 64 at T:720356 is C:26.890\n",
-      "Sample 65 at T:720397 is C:26.890\n",
-      "Sample 66 at T:720438 is C:27.187\n",
-      "Sample 67 at T:720488 is C:26.593\n",
-      "Sample 68 at T:720533 is C:27.261\n",
-      "Sample 69 at T:720578 is C:27.261\n",
-      "Sample 70 at T:720619 is C:27.76\n",
-      "Sample 71 at T:720666 is C:26.964\n",
-      "Sample 72 at T:720755 is C:27.76\n",
-      "Sample 73 at T:720799 is C:26.779\n",
-      "Sample 74 at T:720844 is C:27.224\n",
-      "Sample 75 at T:720894 is C:27.410\n",
-      "Sample 76 at T:720939 is C:26.964\n",
-      "Sample 77 at T:721027 is C:26.890\n",
-      "Sample 78 at T:721073 is C:27.39\n",
-      "Sample 79 at T:721117 is C:27.261\n",
-      "Sample 80 at T:721159 is C:26.964\n",
-      "Sample 81 at T:721250 is C:26.927\n",
-      "Sample 82 at T:721301 is C:26.742\n",
-      "Sample 83 at T:721346 is C:27.1\n",
-      "Sample 84 at T:721386 is C:27.1\n",
-      "Sample 85 at T:721438 is C:27.261\n",
-      "Sample 86 at T:721483 is C:27.632\n",
-      "Sample 87 at T:721522 is C:27.113\n",
-      "Sample 88 at T:721571 is C:27.39\n",
-      "Sample 89 at T:721614 is C:26.705\n",
-      "Sample 90 at T:721661 is C:27.1\n",
-      "Sample 91 at T:721748 is C:26.631\n",
-      "Sample 92 at T:721797 is C:27.372\n",
-      "Sample 93 at T:721842 is C:26.445\n",
-      "Sample 94 at T:721881 is C:27.76\n",
-      "Sample 95 at T:721933 is C:26.927\n",
-      "Sample 96 at T:721975 is C:27.335\n",
-      "Sample 97 at T:722021 is C:26.890\n",
-      "Sample 98 at T:722066 is C:26.890\n",
-      "Sample 99 at T:722113 is C:27.187\n",
-      "Sample 100 at T:722203 is C:27.261\n",
-      "2023-02-14 04:39:28,891 |\u001b[32m INFO     \u001b[0m|: Disconnected from AB6C95E9-A4ED-4F7A-B208-0AFEAFDDA3AD\n"
+      "Sample 1 at T:2983964 is C:27.669\n",
+      "Sample 2 at T:2983964 is C:27.521\n",
+      "Sample 3 at T:2983965 is C:27.298\n",
+      "Sample 4 at T:2983965 is C:27.743\n",
+      "Sample 5 at T:2984006 is C:27.706\n",
+      "Sample 6 at T:2984140 is C:27.595\n",
+      "Sample 7 at T:2984140 is C:28.40\n",
+      "Sample 8 at T:2984190 is C:27.669\n",
+      "Sample 9 at T:2984190 is C:27.447\n",
+      "Sample 10 at T:2984279 is C:27.743\n",
+      "Sample 11 at T:2984279 is C:28.263\n",
+      "Sample 12 at T:2984368 is C:27.595\n",
+      "Sample 13 at T:2984459 is C:27.892\n",
+      "Sample 14 at T:2984459 is C:27.966\n",
+      "Sample 15 at T:2984499 is C:27.632\n",
+      "Sample 16 at T:2984506 is C:27.669\n",
+      "Sample 17 at T:2984548 is C:27.669\n",
+      "Sample 18 at T:2984595 is C:27.818\n",
+      "Sample 19 at T:2984595 is C:27.743\n",
+      "Sample 20 at T:2984636 is C:27.743\n",
+      "Sample 21 at T:2984730 is C:28.40\n",
+      "Sample 22 at T:2984819 is C:27.298\n",
+      "Sample 23 at T:2984864 is C:27.632\n",
+      "Sample 24 at T:2984864 is C:28.226\n",
+      "Sample 25 at T:2984912 is C:27.335\n",
+      "Sample 26 at T:2984958 is C:28.40\n",
+      "Sample 27 at T:2984998 is C:27.595\n",
+      "Sample 28 at T:2985046 is C:27.743\n",
+      "Sample 29 at T:2985135 is C:27.187\n",
+      "Sample 30 at T:2985228 is C:27.780\n",
+      "Sample 31 at T:2985269 is C:27.150\n",
+      "Sample 32 at T:2985317 is C:28.77\n",
+      "Sample 33 at T:2985362 is C:27.521\n",
+      "Sample 34 at T:2985403 is C:27.780\n",
+      "Sample 35 at T:2985494 is C:27.447\n",
+      "Sample 36 at T:2985543 is C:27.298\n",
+      "Sample 37 at T:2985586 is C:27.743\n",
+      "Sample 38 at T:2985629 is C:27.150\n",
+      "Sample 39 at T:2985675 is C:27.929\n",
+      "Sample 40 at T:2985723 is C:27.521\n",
+      "Sample 41 at T:2985766 is C:28.151\n",
+      "Sample 42 at T:2985811 is C:28.3\n",
+      "Sample 43 at T:2985859 is C:27.410\n",
+      "Sample 44 at T:2985988 is C:27.595\n",
+      "Sample 45 at T:2986040 is C:27.632\n",
+      "Sample 46 at T:2986085 is C:27.743\n",
+      "Sample 47 at T:2986127 is C:27.818\n",
+      "Sample 48 at T:2986216 is C:27.261\n",
+      "Sample 49 at T:2986305 is C:27.521\n",
+      "Sample 50 at T:2986350 is C:27.669\n",
+      "Sample 51 at T:2986401 is C:27.743\n",
+      "Sample 52 at T:2986441 is C:27.298\n",
+      "Sample 53 at T:2986485 is C:28.40\n",
+      "Sample 54 at T:2986535 is C:27.892\n",
+      "Sample 55 at T:2986578 is C:27.447\n",
+      "Sample 56 at T:2986621 is C:27.706\n",
+      "Sample 57 at T:2986714 is C:27.372\n",
+      "Sample 58 at T:2986939 is C:27.484\n",
+      "Sample 59 at T:2986984 is C:27.892\n",
+      "Sample 60 at T:2987122 is C:27.595\n",
+      "Sample 61 at T:2987163 is C:28.40\n",
+      "Sample 62 at T:2987211 is C:27.410\n",
+      "Sample 63 at T:2987257 is C:27.706\n",
+      "Sample 64 at T:2987300 is C:27.447\n",
+      "Sample 65 at T:2987348 is C:27.521\n",
+      "Sample 66 at T:2987388 is C:27.595\n",
+      "Sample 67 at T:2987482 is C:27.892\n",
+      "Sample 68 at T:2987527 is C:27.892\n",
+      "Sample 69 at T:2987567 is C:27.780\n",
+      "Sample 70 at T:2987616 is C:27.892\n",
+      "Sample 71 at T:2987661 is C:27.929\n",
+      "Sample 72 at T:2987709 is C:27.372\n",
+      "Sample 73 at T:2987749 is C:27.521\n",
+      "Sample 74 at T:2987794 is C:27.335\n",
+      "Sample 75 at T:2987840 is C:27.966\n",
+      "Sample 76 at T:2987885 is C:27.818\n",
+      "Sample 77 at T:2987933 is C:27.410\n",
+      "Sample 78 at T:2987979 is C:27.595\n",
+      "Sample 79 at T:2988069 is C:27.632\n",
+      "Sample 80 at T:2988114 is C:27.669\n",
+      "Sample 81 at T:2988158 is C:27.855\n",
+      "Sample 82 at T:2988204 is C:27.558\n",
+      "Sample 83 at T:2988248 is C:27.780\n",
+      "Sample 84 at T:2988291 is C:27.298\n",
+      "Sample 85 at T:2988335 is C:27.224\n",
+      "Sample 86 at T:2988380 is C:27.706\n",
+      "Sample 87 at T:2988470 is C:27.892\n",
+      "Sample 88 at T:2988515 is C:28.40\n",
+      "Sample 89 at T:2988608 is C:27.780\n",
+      "Sample 90 at T:2988653 is C:28.485\n",
+      "Sample 91 at T:2988698 is C:27.780\n",
+      "Sample 92 at T:2988788 is C:27.447\n",
+      "Sample 93 at T:2988882 is C:27.187\n"
      ]
     }
    ],
    "source": [
-    "# Add a command GET_TEMP_5s_RAPID which sends an array of five seconds worth of rapidly sampled temperature data. \n",
-    "\n",
-    "instances = 1\n",
-    "\n",
     "def notif_callback(uuid, data):\n",
     "    pair = (ble.bytearray_to_string(data)).split('|')\n",
     "    \n",
@@ -626,12 +596,10 @@
     "    if round(time.time()*1000) - start_time > 5000:\n",
     "        ble.stop_notify(ble.uuid['RX_STRING'])    \n",
     "\n",
+    "instances = 1\n",
     "ble.start_notify(ble.uuid['RX_STRING'], notif_callback)\n",
     "ble.send_command(CMD.GET_TEMP_5s_RAPID, \"\")\n",
-    "        \n",
-    "start_time = round(time.time()*1000)\n",
-    "rapid_temp_notif_handler()\n",
-    "    \n"
+    "start_time = round(time.time()*1000)"
    ]
   },
   {
@@ -655,7 +623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
